// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin plugin with router should inner wrap the route 1`] = `
<body>
  <div
    data-testid="root"
    id="root"
  >
    <div>
      innerRouter
      <div>
        <div>
          <button>
            go children
          </button>
          home
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`plugin plugin with router should inner wrap the route 2`] = `
<body>
  <div
    data-testid="root"
    id="root"
  >
    <div>
      innerRouter
      <div>
        <div>
          <button>
            go children
          </button>
          home
          <div>
            innerRouter
            <div>
              <div>
                children
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
